--- a/Tasks/templates/Tasks/index.html
+++ b/Tasks/templates/Tasks/index.html
@@ -16,20 +16,29 @@
             margin: 50px auto;
             padding:10px;
             text-align: center;
-            border:1px solid black;
-            
+            border:1px solid #ddd;
+            border-radius: 8px;
+             box-shadow: 0 8px 25px rgba(0,0,0,0.1);
            
         }
 
         h1{
 
             text-align: center;
-            margin-bottom: 20px;
-            border:1px solid blue;
+            margin-bottom: 30px;
+            padding:10px;
         }
 
         form{
-            border:1px solid red;
+           
+            padding:10px;
+        }
+
+        input{
+            width:50%;
+            padding:5px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
         }
         
        
@@ -42,6 +51,7 @@
         <h1>My Todo List</h1>
 
         <form action="" method="POST">
+            {% csrf_token %}
             <input type="text" required>
             <button type="submit">Add</button>
         </form>
