--- a/Tasks/templates/Tasks/index.html
+++ b/Tasks/templates/Tasks/index.html
@@ -53,7 +53,7 @@
         <form action="" method="POST">
 
             {% csrf_token %}
-            <input type="text" name="task" required>
+            <input type="text" name="title" required>
             <button type="submit" >Add</button>
             
         </form>
