--- a/Tasks/templates/Tasks/index.html
+++ b/Tasks/templates/Tasks/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         *{
             margin:0px;
@@ -12,7 +13,7 @@
         }
         .main-container{
             width:40%;
-            height: 500px;
+            height: 600px;
             margin: 50px auto;
             padding:10px;
             text-align: center;
@@ -27,20 +28,56 @@
             text-align: center;
             margin-bottom: 30px;
             padding:10px;
+            color:#0077ff;
         }
 
         form{
            
             padding:10px;
+            margin-bottom: 20px;
         }
 
         input{
-            width:50%;
-            padding:5px;
+            width:70%;
+            padding:10px;
             border-radius: 8px;
             border: 1px solid #ccc;
         }
+
+        .task-container{
+
+            border:1px solid #ddd;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            padding:8px;
+            
+        }
+
+        #add-btn  {
+            margin-top: 5px;
+            margin-left: 10px;
+            font-size: 20px; /* increase the size as needed */
+            border: none;
+            border-radius: 50%;
+            background-color: white;
+        }
+
+        .delete-btn {
         
+            border: none;
+            border-radius: 50%; /* circle */
+            float: right;
+           
+            
+        
+        }
+
+        .delete-btn i {
+            font-size: 16px; /* size of trash icon */
+            color:red;
+            
+        }
+       
        
 
 
@@ -53,10 +90,25 @@
         <form action="" method="POST">
 
             {% csrf_token %}
-            <input type="text" name="title" required>
-            <button type="submit" >Add</button>
+            <input type="text" placeholder="Add new task" name="title" required>
+            <button id="add-btn" type="submit" ><i class="fas fa-plus"></i></button>
             
         </form>
+
+         {% for task in tasks %}
+            <div class="task-container">
+        
+              {{ task }}
+               <button class="delete-btn" type="button">
+                <a href="{% url 'delete_task' task.id %}" onclick="return confirm('Are you sure you want to delete this task?');">
+                    
+                    <i class="fas fa-trash"></i>
+                </a>
+                </button>
+
+            </div>
+        {% endfor %}
+        
     </div>
 </body>
 </html>
