improve the task container

--- a/Tasks/templates/Tasks/index.html
+++ b/Tasks/templates/Tasks/index.html
@@ -13,7 +13,7 @@
         }
         .main-container{
             width:40%;
-            height: 600px;
+            min-height: 200px;
             margin: 50px auto;
             padding:10px;
             text-align: center;
@@ -75,10 +75,6 @@
             text-decoration: none;
             margin-left: 10px;
         }
-
-       
-       
-
 
     </style>
 </head>
